--- a/package.json
+++ b/package.json
@@ -46,8 +46,12 @@
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.6.1",
     "husky": "^0.11.9",
-    "mocha": "^3.2.0",
+    "mocha": "^5.1.1",
+    "node-fetch": "^2.6.0",
     "nyc": "^10.2.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^3.0.0",
+    "sinon-stub-promise": "^4.0.0"
   }
 }
