--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "clear": "rimraf lib",
-    "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
+    "prebuild": "./node_modules/.bin/babel --out-dir bin src",
+    "build": "npm run clear && npm run prebuild",
     "build:watch": "npm run build -- --watch",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
@@ -38,7 +39,7 @@
   },
   "homepage": "https://github.com/willianjusten/js-tdd-course#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-register": "^6.24.0",
     "chai": "^3.5.0",
@@ -49,7 +50,7 @@
     "mocha": "^5.1.1",
     "node-fetch": "^2.6.0",
     "nyc": "^10.2.0",
-    "rimraf": "^2.6.1",
+    "rimraf": "^2.7.1",
     "sinon": "^2.1.0",
     "sinon-chai": "^3.0.0",
     "sinon-stub-promise": "^4.0.0"
