--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "prebuild": "./node_modules/.bin/babel --out-dir bin src",
     "build": "npm run clear && npm run prebuild",
     "build:watch": "npm run build -- --watch",
+    "build:umd": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.js",
+    "build:all": "npm run build && npm run build:umd",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
@@ -40,6 +42,7 @@
   "homepage": "https://github.com/willianjusten/js-tdd-course#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.3.2",
     "babel-register": "^6.24.0",
     "chai": "^3.5.0",
@@ -53,6 +56,8 @@
     "rimraf": "^2.7.1",
     "sinon": "^2.1.0",
     "sinon-chai": "^3.0.0",
-    "sinon-stub-promise": "^4.0.0"
+    "sinon-stub-promise": "^4.0.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7"
   }
 }
