Fix eslint conflict with prettier

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:umd": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.js",
     "build:all": "npm run build && npm run build:umd",
     "lint": "./node_modules/.bin/eslint src/*.js",
+    "lint:fix": "./node_modules/.bin/eslint src/*.js --fix",
     "prepush": "npm run lint",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
@@ -54,6 +55,7 @@
     "coveralls": "^3.0.6",
     "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.6.1",
     "husky": "^0.11.9",
     "mocha": "^5.1.1",
